# BBHNet

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  deploy.yaml  dummy.def  environment.yaml
.github/workflows/: ci-tests.yaml  container-build.yaml
aframe/datagen/: conda-lock.yml  datagen.def  environment.yaml  pyproject.toml
aframe/datagen/datagen/: background.py  segments.py  timeslide_waveforms.py  waveforms.py
aframe/datagen/datagen/background/: background.py  condorize.py
aframe/datagen/datagen/timeslide_waveforms/: condorize.py  timeslide_waveforms.py
aframe/infer/infer/: cli.py  data.py  main.py  postprocess.py
aframe/pipelines/: Untitled-1.ipynb  example_luigi.cfg  pyproject.toml
aframe/pipelines/configs/: train.yaml
aframe/pipelines/pipelines/: __init__.py  configs.py  constants.py
aframe/pipelines/pipelines/configs/: __init__.py  train.yaml
aframe/pipelines/pipelines/pipelines/: sandbox.py
aframe/pipelines/pipelines/tasks/: apptainer.py  train.py
aframe/pipelines/pipelines/tasks/datagen/: __init__.py  background.py  directory.py  segments.py  timeslide_waveforms.py  waveforms.py
aframe/train/: Singularity  config.yaml  pyproject.toml  train.def
aframe/train/train/: augmentations.py  cli.py  data.py  main.py  metrics.py  model.py  plotting.py  tune.py  validation.py
aframe/utils/: pyproject.toml
aframe/utils/aframe/: datagen.py
aframe/utils/aframe/architectures/: __init__.py  resnet.py  zoo.py
aframe/utils/aframe/architectures/autoencoder/: __init__.py  base.py  convolutional.py  skip_connection.py  utils.py
aframe/utils/aframe/ledger/: events.py  injections.py
libs/analysis/bbhnet/analysis/: __init__.py  analysis.py  events.py  matched_filter.py  normalizers.py  sensitivity.py
libs/analysis/bbhnet/analysis/distributions/: cluster.py  discrete.py  distribution.py
libs/analysis/bbhnet/analysis/ledger/: events.py  injections.py  ledger.py
libs/analysis/tests/: test_analysis.py  test_events.py  test_normalizers.py  test_sensitive_volume.py
libs/analysis/tests/distributions/: test_discrete.py  test_distribution.py
libs/analysis/tests/ledger/: test_events.py  test_injections.py
libs/architectures/aframe/architectures/: __init__.py  preprocessor.py  resnet.py  wrapper.py  xylophone.py
libs/injection/bbhnet/injection/: injection.py
libs/injection/tests/: test_injection.py
libs/io/: pyproject.toml
libs/io/bbhnet/io/: __init__.py  h5.py  timeslides.py
libs/io/tests/: test_h5.py  test_timeslides.py
libs/logging/bbhnet/: logging.py
libs/parallelize/: pyproject.toml
libs/parallelize/bbhnet/: parallelize.py
libs/parallelize/tests/: test_parallelize.py
libs/priors/bbhnet/priors/: priors.py
projects/o2-timeslide-analysis/: analyze_o2.py  pyproject.toml
projects/o2-timeslide-analysis/analyze_o2/: analysis.py  utils.py
projects/sandbox/: pyproject.toml  search.py
projects/sandbox/analyze/: analyze.py
projects/sandbox/analyze/analyze/: distribution.py  main.py  segment.py  utils.py
projects/sandbox/datagen/: environment.yaml  pyproject.toml
projects/sandbox/datagen/datagen/scripts/: background.py  glitches.py  timeslide_waveforms.py
projects/sandbox/datagen/datagen/utils/: timeslide_waveforms.py
projects/sandbox/deploy/: environment.yaml  pyproject.toml
projects/sandbox/deploy/deploy/: buffer.py  dataloading.py  main.py  trigger.py
projects/sandbox/export/: export.py
projects/sandbox/export/export/: main.py  snapshotter.py
projects/sandbox/infer/: infer.py  pyproject.toml
projects/sandbox/infer/infer/: callback.py  data.py  deploy.py  main.py  sequence.py
projects/sandbox/infer/infer/data/: __init__.py  batcher.py  injector.py  loader.py
projects/sandbox/infer/tests/: test_callback.py  test_data.py
projects/sandbox/infer/tests/data/: test_batcher.py  test_loader.py
projects/sandbox/mdc/: pyproject.toml
projects/sandbox/mdc/mdc/: callback.py  deploy.py  main.py
projects/sandbox/mdc/mdc/data/: __init__.py  batcher.py  loader.py
projects/sandbox/plots/plots/: sensitive_volume.py
projects/sandbox/sandbox/: pyproject.toml
projects/sandbox/timeslide_injections/: timeslide_injections.py
projects/sandbox/train/: pyproject.toml
projects/sandbox/train/tests/: test_data_structures.py
projects/sandbox/train/train/: augmentations.py  augmentor.py  data_structures.py  main.py  model.py  train.py  utils.py  validation.py
projects/sandbox/vizapp/: pyproject.toml
projects/sandbox/vizapp/vizapp/: app.py  distributions.py  main.py
projects/sandbox/vizapp/vizapp/pages/: __init__.py
projects/sandbox/vizapp/vizapp/pages/data/: __init__.py  page.py
projects/sandbox/vizapp/vizapp/pages/performance_summary/: page.py  sensitive_volume.py
projects/sandbox/vizapp/vizapp/pages/summary/: __init__.py  page.py  sensitive_volume.py
projects/sandbox/vizapp/vizapp/plots/: background.py  event_inspector.py  perf_summary.py
