[tool.poetry]
name = "datagen"
version = "0.1.0"
description = "Generate data for training and evaluating aframe"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11" 
h5py = "^3.9.0"
gwpy = "^2.1"
lalsuite = "^7.19"

typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}
ml4gw = {path = "../../ml4gw", develop = true}
mldatafind = {path = "../../mldatafind", develop = true}
aframe = {path = "../utils", develop = true}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
