[tool.poetry]
name = "pipelines"
version = "0.0.1"
description = "Modular aframe tasks for pipeline construction"
authors = [
    "Ethan Marx <ethan.marx@ligo.org>",
    "Alec Gunny <alecg@mit.edu>",
    "Will Benoit <benoit090@umn.edu>"
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
luigi = "^3.3"
pycondor = {path = "../../pycondor", develop = true}
law = "^0.1"
numpy = "^1.25.2"
aframe = {path = "../utils", develop = true}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


# TODO refactor utils: we don't need torch here
[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
